[project]
name = "thoughts-string"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.2",
    "matplotlib>=3.10.8",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
